realocando no footer

--- a/Front-HTML-CSS/aula1/contact.html
+++ b/Front-HTML-CSS/aula1/contact.html
@@ -19,23 +19,25 @@
     </nav>
 </header>
 <body>
-<form action="">
-    <label for="name">Digite seu nome completo:</label>
-    <input type="name" placeholder="nome completo" type="text">
-    <br><br>
-    <label for="email">Digite seu e-mail</label>
-    <input type="email" placeholder="e-mail" type="text">
-    <br><br>
-    <label for="questions">Qual o motivo do contato</label>
-    <select name="questions" id="questions">
-        <option value="questao1">HTML é easy demais</option>
-    </select>
-    <br><br>
-    <label for="">Sua Mensagem</label><br>
-    <textarea name="bio" id="bio" cols="30" rows="10" placeholder="Hello World"></textarea>
-    <br><br>
-    <input type="submit" value="Salvar">
-</form>
+<main>
+    <form action="">
+        <label for="name">Digite seu nome completo:</label>
+        <input type="name" placeholder="nome completo" type="text">
+        <br><br>
+        <label for="email">Digite seu e-mail</label>
+        <input type="email" placeholder="e-mail" type="text">
+        <br><br>
+        <label for="questions">Qual o motivo do contato</label>
+        <select name="questions" id="questions">
+            <option value="questao1">HTML é easy demais</option>
+        </select>
+        <br><br>
+        <label for="">Sua Mensagem</label><br>
+        <textarea name="bio" id="bio" cols="30" rows="10" placeholder="Hello World"></textarea>
+        <br><br>
+        <input type="submit" value="Salvar">
+    </form>
+</main>
 <footer>
     <nav>
         <ul>
@@ -44,9 +46,9 @@
             <li><a href="#">Contato</a></li>
         </ul>
     </nav>
-<address>
-    AV. Andarai 531 - Porto Alegre
-</address>
+    <address>
+        AV. Andarai 531 - Porto Alegre
+    </address>
 </footer>
 </body>
 </html>
