--- a/Front-HTML-CSS/aula1/about.html
+++ b/Front-HTML-CSS/aula1/about.html
@@ -18,13 +18,13 @@
     </nav>
 </header>
 <body>
-    <section>
+    <main>
         <h1>Sobre a DBC</h1>
         <iframe width="400" heigh="480" src="https://www.youtube.com/embed/lq5hlLaa16s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore repellendus doloremque optio quae, ab iure porro perspiciatis laborum nobis necessitatibus mollitia nostrum pariatur ut nulla non incidunt reiciendis assumenda officia! Reprehenderit ipsum saepe illum pariatur officia voluptas nostrum commodi neque eius voluptatum, quis autem. Quasi adipisci nesciunt eum modi dignissimos illum rerum! Iure rem deleniti dolor est, aperiam maiores porro nesciunt quo aut repellat. Iure deleniti delectus corporis ab facere dignissimos error neque maiores omnis voluptate illum nisi suscipit explicabo sapiente in placeat, quisquam ipsa natus, blanditiis voluptatem quibusdam quaerat maxime. Deserunt eveniet atque perferendis eum blanditiis accusamus magni, vel accusantium corrupti, voluptates laborum, id nihil. Iure blanditiis, hic commodi eaque consequuntur ea quas deserunt ipsum, voluptatibus libero magnam id, rem ipsam unde sit incidunt! Veniam quo sint ullam odio.
-    </section>
-    <section>
+    </main>
+    <footer>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -32,10 +32,8 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-    </section>
     <br>
-    <footer>
-    AV.Andarai 531 - Porto Alegre
+    <address>AV Andarai 531 - Porto Alegre</address>
     </footer>
 </body>
 </html>
