--- a/Front-HTML-CSS/aula1/contact.html
+++ b/Front-HTML-CSS/aula1/contact.html
@@ -22,14 +22,14 @@
 <main>
     <form action="">
         <label for="name">Digite seu nome completo:</label>
-        <input type="name" placeholder="nome completo" type="text">
+        <input name="name" placeholder="nome completo" type="text">
         <br><br>
         <label for="email">Digite seu e-mail</label>
-        <input type="email" placeholder="e-mail" type="text">
+        <input name="email" placeholder="e-mail" type="text">
         <br><br>
         <label for="questions">Qual o motivo do contato</label>
         <select name="questions" id="questions">
-            <option value="questao1">HTML é easy demais</option>
+        <option value="questao1">HTML é easy demais</option>
         </select>
         <br><br>
         <label for="">Sua Mensagem</label><br>
